--- a/style/index.css
+++ b/style/index.css
@@ -1231,6 +1231,10 @@ p .li {
         max-width: 32rem;
     }
 
+    #icons03 {
+        font-size: 1.5em;
+    }
+
     #image01 img {
         height: 17.75rem !important;
     }
@@ -1296,13 +1300,13 @@ p .li {
     }
 
     #icons03 {
+        font-size: 1.25em;
         width: calc(100% + 0.9375rem);
         margin-left: -0.46875rem;
     }
 
     #icons03 li {
         margin: 0.46875rem;
-        font-size: 0.8em;
     }
 
     #image01 img {
